--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,6 @@ autopep8 = { version = "*" }
 pytest = { version = "*" }
 
 [packages]
-numpy = { version = "1.20.1" }
-scipy = { version = "1.6.0" }
-matplotlib = { version = "3.3.4" }
-palettable = { version = "3.3.0" }
+numpy = { version = "==1.20.1" }
+scipy = { version = "==1.6.0" }
+matplotlib = { version = "==3.3.4" }
