--- a/Pipfile
+++ b/Pipfile
@@ -12,4 +12,4 @@ pytest = { version = "*" }
 numpy = { version = "==1.20.1" }
 scipy = { version = "==1.6.0" }
 matplotlib = { version = "==3.3.4" }
-Pillow = ">=8.1.1"
+pillow = ">=8.1.1"
